--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.project_">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project_"
-        android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name=".Loading"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".Loading"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,16 +23,16 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-        </activity>
-        <activity android:name=".Signup_cl"/>
-        <activity android:name=".LoginPage_cl"/>
-        <activity android:name=".Find_Id_cl"/>
-        <activity android:name=".Signup_cl2"/>
-        <activity android:name=".Find_pass_cl"/>
-        <activity android:name=".pass_reset_cl"/>
-        <activity android:name=".home"/>
-        <activity android:name=".Find_ID_result"/>
+            android:exported="true"></activity>
+        <activity android:name=".Signup_cl" />
+        <activity android:name=".LoginPage_cl" />
+        <activity android:name=".Find_Id_cl" />
+        <activity android:name=".Signup_cl2" />
+        <activity android:name=".Find_pass_cl" />
+        <activity android:name=".pass_reset_cl" />
+        <activity android:name=".home" />
+        <activity android:name=".Find_ID_result" />
+        <activity android:name=".Reset_Pass_Result" />
     </application>
 
 </manifest>
