--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,14 @@ android {
 
 dependencies {
 
+    //Material Design
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+    //Rounded Image View
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    //Navigation Component
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc03'
+
+    implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc03'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
