--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ dependencies {
     //Navigation Component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc03'
 
+    implementation "com.github.bumptech.glide:glide:4.10.0"
+    
+    
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc03'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
