--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.2.0-rc03'
 
     implementation "com.github.bumptech.glide:glide:4.10.0"
-    
-    
+
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'me.relex:circleindicator:2.1.6'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.2.0-rc03'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
@@ -47,4 +50,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation files('libs/libDaumMapAndroid.jar')
+
 }
