--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,7 +15,7 @@
         android:theme="@style/Theme.Project_"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".user_info"
+            android:name=".test"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,6 +27,7 @@
             android:exported="true"></activity>
         <activity android:name=".Signup_cl" />
         <activity android:name=".LoginPage_cl" />
+        <activity android:name=".user_info" />
         <activity android:name=".Find_Id_cl" />
         <activity android:name=".Signup_cl2" />
         <activity android:name=".Find_pass_cl" />
@@ -37,6 +39,10 @@
         <activity android:name=".change_nn" />
         <activity android:name=".change_email" />
         <activity android:name=".change_pass" />
+
+        <meta-data
+            android:name="com.kakao.sdk.AppKey"
+            android:value="56514e3f348ac1b87f0c65286f2c5b41" />
     </application>
 
 </manifest>
