--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.Project_"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".test"
+            android:name=".Find_store"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
